nyt-pod-scraper/k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pod-monitor
  labels:
    app.kubernetes.io/name: pod-monitor
