nyt-pod-scraper/k8s/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-monitor
  namespace: pod-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pod-monitor
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pod-monitor
        component: api
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - pod-monitor
      containers:
        - name: pod-monitor
          image: "REPLACE_ECR_URL:latest"
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            httpGet:
              path: /api/podcasts
              port: 5001
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            httpGet:
              path: /api/podcasts
              port: 5001
          ports:
            - name: http
              containerPort: 5001
              protocol: TCP
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
      serviceAccountName: pod-monitor
