nyt-pod-scraper/k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pod-monitor
  namespace: pod-monitor
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ""
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5001
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pod-monitor
